--- a/index.html
+++ b/index.html
@@ -6,16 +6,34 @@
     <title>Wetter-App</title>
 </head>
 <body>
+    <div class="weather-app">
     <header>
-
+       <form id="search-form">
+        <input type="text" placeholder="Enter city..." required>
+        <input type="submit" placeholder="Search">
+       </form>
     </header>
     <main>
+        <div class="weather-data">
+        <div class="weather-city">
+            <h1>Paris</h1>
+        </div>
+        <div class="weather-deatails">
+            <p>🌥️12℃</p>
+        </div>
+        </div>
 
+        <p>Tuesday 19:13,clear sky<br>
+        Humdity 87%,Wind 4.6km/h
+        </p>
+       
+        
     </main>
     <footer>
         <p>This project was coded by <a href="jnrcromwell-ctrl">Olivia Cromwellgit</a> is <a href="https://github.com/jnrcromwell-ctrl/">is open-source on GitHub</a>
-        <a href="">and hosted on Netlify</a>
+        <a href="https://wetter-upp.netlify.app/">and hosted on Netlify</a>
         </p>
     </footer>
+    </div>
 </body>
 </html>
