--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         
     </main>
     <footer>
-        <p>This project was coded by <a href="jnrcromwell-ctrl">Olivia Cromwell</a> is <a href="https://github.com/jnrcromwell-ctrl/">is open-source on GitHub</a>
-        and <a href="https://wetter-upp.netlify.app/">hosted on Netlify</a>
+        <p>This project was coded by <a href="jnrcromwell-ctrl" target="_blank">Olivia Cromwell</a> is <a href="https://github.com/jnrcromwell-ctrl/" target="_blank">is open-source on GitHub</a>
+        and <a href="https://wetter-upp.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
     </footer>
     </div>
